--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
     "element-ui": "^2.15.5",
     "module": "^1.2.5",
     "vue": "^2.6.11",
