--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,8 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 server:
+  tomcat:
+    uri-encoding: UTF-8
   port: 8080
+  servlet:
+    context-path: /api
