--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -13,7 +13,9 @@
     "dayjs": "^1.10.6",
     "element-ui": "^2.15.5",
     "module": "^1.2.5",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
+    "vue-qr": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.8",
