--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
     "element-ui": "^2.15.5",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.3.1",
     "module": "^1.2.5",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
