--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -17,6 +17,7 @@
     "module": "^1.2.5",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-qr": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
