--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cesium": "^1.84.0",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
     "element-ui": "^2.15.5",
@@ -17,6 +18,7 @@
     "module": "^1.2.5",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-qr": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
