--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 			<version>3.15</version>
 		</dependency>
 		<!--poi end-->
+
+		<!-- WebSocket 支持 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
