--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -16,10 +16,11 @@
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
     "module": "^1.2.5",
+    "moment": "^2.29.1",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11",
-    "vue-clipboard2": "^0.3.1",
     "vue-amap": "^0.5.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-qr": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
