--- a/questionnaire_planet/package.json
+++ b/questionnaire_planet/package.json
@@ -12,6 +12,7 @@
     "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.5",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
